--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "Billing-Cycle",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/loader.js",
   "scripts": {
+    "dev": "nodemon",
+    "production": "pm2 start src/loader.js --name Billing-Cycle",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,8 +24,12 @@
     "express": "^4.14.0",
     "express-query-int": "^1.0.1",
     "lodash": "^4.17.4",
-    "mongoose": "^4.7.0",
+    "mongoose": "^4.13.19",
     "mongoose-paginate": "^5.0.3",
-    "node-restful": "^0.2.5"
+    "node-restful": "^0.2.5",
+    "pm2": "^2.1.5"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
